--- a/fonts/font1.html
+++ b/fonts/font1.html
@@ -8,7 +8,7 @@ body {
 background-color:#EA502F;
 text-align: center;
 color: #FFFFFF;
-font-family: Arial, Helvetica, sans-serif;
+font-family: myFirstFont;
 }
 </style>
 <style> 
